--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "12.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-fade-in": "^2.0.1",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
     "sass": "^1.49.9",
