--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@swc/core": "^1.2.160",
     "copy-to-clipboard": "^3.3.1",
     "csstype": "^3.0.10",
+    "dayjs": "^1.11.1",
     "goober": "2.1.8",
     "next": "12.1.1",
     "react": "17.0.2",
