--- a/package.json
+++ b/package.json
@@ -6,17 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "buildexport": "next build && next export"
   },
   "dependencies": {
-    "@swc/core": "^1.2.160",
+    "@swc/core": "^1.2.171",
     "copy-to-clipboard": "^3.3.1",
     "csstype": "^3.0.10",
     "dayjs": "^1.11.1",
     "goober": "2.1.8",
-    "next": "12.1.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "12.1.5",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-fade-in": "^2.0.1",
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.3.1",
@@ -24,9 +25,9 @@
     "use-last-fm": "^0.6.1"
   },
   "devDependencies": {
-    "@types/node": "17.0.23",
-    "@types/react": "17.0.43",
-    "@types/react-dom": "17.0.14",
+    "@types/node": "17.0.26",
+    "@types/react": "^18.0.7",
+    "@types/react-dom": "^18.0.0",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.1",
     "typescript": "4.6.3"
