--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hot-toast": "^2.3.0",
     "react-icons": "^4.4.0",
     "sass": "^1.54.4",
+    "swr": "^1.3.0",
     "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
   }
