--- a/package.json
+++ b/package.json
@@ -1,39 +1,32 @@
 {
   "name": "portfolio",
-  "version": "1.0",
+  "version": "2.0",
   "private": true,
-  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "buildexport": "next build && next export"
+    "lint": "next lint"
   },
   "dependencies": {
-    "aws-sdk": "^2.1189.0",
-    "copy-to-clipboard": "^3.3.2",
-    "@swc/core": "^1.2.223",
-    "csstype": "^3.1.0",
-    "dayjs": "^1.11.4",
-    "dotenv": "^16.0.1",
-    "goober": "2.1.10",
-    "next": "12.2.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "aws-sdk": "^2.1194.0",
+    "next": "12.2.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-fade-in": "^2.0.1",
-    "react-hot-toast": "^2.3.0",
-    "react-icons": "^4.4.0",
-    "sass": "^1.54.3",
-    "use-last-fm": "^0.6.1"
+    "swr": "^1.3.0"
   },
   "devDependencies": {
-    "@types/react-dom": "^18.0.6",
-    "@types/node": "18.6.4",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.4",
-    "eslint": "8.21.0",
-    "eslint-config-next": "12.2.4",
+    "@types/node": "18.7.3",
+    "@types/react": "18.0.17",
+    "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.8",
+    "copy-to-clipboard": "^3.3.2",
+    "postcss": "^8.4.16",
+    "react-hot-toast": "^2.3.0",
+    "react-icons": "^4.4.0",
+    "sass": "^1.54.4",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
   }
 }
