--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.3.1",
     "aws-sdk": "^2.1228.0",
+    "next": "12.3.1",
+    "next-safe": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-fade-in": "^2.0.1",
