--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
     "sass": "^1.55.0",
+    "spotify-now-playing": "^0.1.3",
     "tailwindcss": "^3.1.8",
     "typescript": "4.8.4"
   }
