--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1228.0",
+    "axios": "^1.1.3",
     "next": "12.3.1",
     "next-safe": "^3.2.1",
     "react": "18.2.0",
