--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "@types/react-dom": "18.0.7",
     "autoprefixer": "^10.4.12",
     "copy-to-clipboard": "^3.3.2",
+    "eslint": "8.26.0",
+    "eslint-config-next": "13.0.0",
     "postcss": "^8.4.18",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.6.0",
     "sass": "^1.55.0",
     "tailwindcss": "^3.2.1",
+    "turbo": "^1.6.1",
     "typescript": "4.8.4"
   }
 }
