--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,12 @@ next-env.d.ts
 
 # turbo
 .turbo
+
+# yarn
+.yarn/*
+.yarn/cache
+.yarn/patches
+.yarn/plugins
+.yarn/releases
+.yarn/sdks
+.yarn/versions
