--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "portfolio",
   "version": "3.0",
   "private": true,
+  "author": "albert",
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -30,7 +32,7 @@
     "react-icons": "^4.6.0",
     "sass": "^1.55.0",
     "tailwindcss": "^3.2.1",
-    "turbo": "^1.6.1",
     "typescript": "4.8.4"
-  }
+  },
+  "packageManager": "yarn@3.2.4"
 }
