--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1239.0",
-    "next": "12.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-fade-in": "^2.0.1",
     "spotify-now-playing": "^0.1.7",
     "swr": "^1.3.0"
@@ -26,7 +26,7 @@
     "autoprefixer": "^10.4.12",
     "copy-to-clipboard": "^3.3.2",
     "eslint": "8.26.0",
-    "eslint-config-next": "13.0.0",
+    "eslint-config-next": "^13.0.0",
     "postcss": "^8.4.18",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.6.0",
