--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,11 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:base"
-  ]
+	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
+	"extends": [
+		"config:base"
+	],
+	"packageRules": [{
+		"matchDepTypes": ["Dependencies", "devDependencies"],
+		"matchPackagePatterns": ["lint", "prettier"],
+		"automerge": true
+	}]
 }
