--- a/renovate.json
+++ b/renovate.json
@@ -4,6 +4,7 @@
 	    "config:base"
 	],
 	"packageRules": [{
+            "matchUpdateTypes": ["major", "minor", "patch", "pin", "digest"],
 	    "automerge": true
     }]
 }
