--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,8 @@
 {
     "$schema": "https://docs.renovatebot.com/renovate-schema.json",
         "extends": [
-	    "config:base"
+	    "config:base",
+	    ":dependencyDashboard"
 	],
 	"packageRules": [{
             "matchUpdateTypes": ["major", "minor", "patch", "pin", "digest"],
