--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "aws-sdk": "^2.1295.0",
     "next": "^13.1.5",
-    "vercel/analytics": "^0.1.8",
+    "@vercel/analytics": "^0.1.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fade-in": "^2.0.1",
