+vercel speed insights

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.1.1",
+    "@vercel/speed-insights": "^1.0.2",
     "axios": "^1.6.2",
     "copy-to-clipboard": "^3.3.3",
     "next": "14.0.4",
