--- a/package.json
+++ b/package.json
@@ -1,33 +1,36 @@
 {
-  "name": "albert.lol",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "biome lint --write src/",
-    "format": "biome format --write src/"
-  },
-  "dependencies": {
-    "copy-to-clipboard": "^3.3.3",
-    "framer-motion": "^11.11.10",
-    "next": "15.0.1",
-    "next-themes": "^0.3.0",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
-    "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.3.0"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "1.9.4",
-    "@types/node": "^22.8.2",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "eslint": "^9.13.0",
-    "eslint-config-next": "15.0.1",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.3"
-  }
+	"name": "albert.lol",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"build": "next build",
+		"start": "next start",
+		"lint": "biome lint --write src/",
+		"format": "biome format --write src/"
+	},
+	"dependencies": {
+		"clsx": "^2.1.1",
+		"copy-to-clipboard": "^3.3.3",
+		"framer-motion": "^11.15.0",
+		"mini-svg-data-uri": "^1.4.4",
+		"next": "15.1.2",
+		"next-themes": "^0.4.4",
+		"react": "19.0.0",
+		"react-dom": "19.0.0",
+		"react-hot-toast": "^2.4.1",
+		"react-icons": "^5.4.0",
+		"tailwind-merge": "^2.5.5"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
+		"@types/node": "^22.10.2",
+		"@types/react": "^19.0.2",
+		"@types/react-dom": "^19.0.2",
+		"eslint": "^9.17.0",
+		"eslint-config-next": "15.1.2",
+		"postcss": "^8.4.49",
+		"tailwindcss": "^3.4.17",
+		"typescript": "^5.7.2"
+	}
 }
