--- a/package.json
+++ b/package.json
@@ -10,27 +10,26 @@
 		"format": "biome format --write src/"
 	},
 	"dependencies": {
+		"@tailwindcss/postcss": "^4.1.11",
 		"clsx": "^2.1.1",
 		"copy-to-clipboard": "^3.3.3",
-		"framer-motion": "^11.15.0",
-		"mini-svg-data-uri": "^1.4.4",
-		"next": "15.1.2",
-		"next-themes": "^0.4.4",
-		"react": "19.0.0",
-		"react-dom": "19.0.0",
-		"react-hot-toast": "^2.4.1",
-		"react-icons": "^5.4.0",
-		"tailwind-merge": "^2.5.5"
+		"framer-motion": "^12.23.3",
+		"next": "15.3.5",
+		"next-themes": "^0.4.6",
+		"ogl": "^1.0.11",
+		"postcss": "^8.5.6",
+		"react": "19.1.0",
+		"react-dom": "19.1.0",
+		"react-hot-toast": "^2.5.2",
+		"react-icons": "^5.5.0",
+		"tailwind-merge": "^3.3.1"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.9.4",
-		"@types/node": "^22.10.2",
-		"@types/react": "^19.0.2",
-		"@types/react-dom": "^19.0.2",
-		"eslint": "^9.17.0",
-		"eslint-config-next": "15.1.2",
-		"postcss": "^8.4.49",
-		"tailwindcss": "^3.4.17",
-		"typescript": "^5.7.2"
+		"@biomejs/biome": "2.1.1",
+		"@types/node": "^24.0.13",
+		"@types/react": "^19.1.8",
+		"@types/react-dom": "^19.1.6",
+		"tailwindcss": "^4.1.11",
+		"typescript": "^5.8.3"
 	}
 }
